moved media queries to own scss file, fixed correct/incorrect icon colours to display on both mobile and desktop, removed horizontal scroll

--- a/src/styles/sass/base/_baseStyles.scss
+++ b/src/styles/sass/base/_baseStyles.scss
@@ -12,7 +12,7 @@ body {
 
 main {
   position: relative;
-  margin-bottom: 80px;
+  padding-bottom: 50px;
 }
 
 .wrapper {
@@ -78,4 +78,11 @@ h3 {
 
 button {
   cursor: pointer;
+}
+
+//prevent horizontal scroll
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
